5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1712_2499.log
== TEST (2019-05-08 15:29:15) 
-- CODE:
from math import*

g= float(input())

e= 0
c= 0

while (c<k):
	e= e + (1/factorial(c))
	c= c + 1
	print(round(e,8))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while (c<k):
NameError: name 'k' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:30) 
-- CODE:
from math import*

g= float(input())

e= 0
c= 0

while (c<g):
	e= e + (1/factorial(c))
	c= c + 1
	print(round(e,8))


-- OUTPUT:
1.0
2.0
2.5
2.66666667
2.70833333
2.71666667
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 15:29:44) 
-- CODE:
from math import*

g= float(input())

e= 0
c= 0

while (c<g):
	e= e + (1/factorial(c))
	c= c + 1
print(round(e,8))


-- OUTPUT:
2.71805556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 15:29:49) 
-- CODE:
from math import*

g= float(input())

e= 0
c= 0

while (c<g):
	e= e + (1/factorial(c))
	c= c + 1
print(round(e,8))


-- EXECUTION TIME:
0.129239
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 13:30:42) 
-- CODE:
from math import*

g= float(input())

e= 0
c= 0

while (c<g):
	e= e + (1/factorial(c))
	c= c + 1
print(round(e,8))


-- EXECUTION TIME:
0.182874
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
